--- a/robotArm.html
+++ b/robotArm.html
@@ -51,7 +51,7 @@
         <input type="range" min="-90" max="90" value="0" oninput="theta[2]=this.value">
 
         <p>Gripper</p>
-        <input type="range" min="-40" max="40" value="0" oninput="theta[3]=this.value">
+        <input type="range" min="-40" max="40" value="0" oninput="theta[3]=Number(this.value)">
     </div>
 
     <!-- Load JS LAST -->
