fix the file structure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>WebGL Robot Arm</title>
 
   <!-- Common WebGL utilities (MV.js exposes globals intentionally) -->
-  <script src="Common/webgl-utils.js"></script>
-  <script src="Common/MV.js"></script>
+  <script src="src/Common/webgl-utils.js"></script>
+  <script src="src/Common/MV.js"></script>
 
   <style>
     body {
@@ -65,6 +65,6 @@
   </div>
 
   <!-- Entry point -->
-  <script type="module" src="main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
