--- a/index.html
+++ b/index.html
@@ -8,35 +8,8 @@
   <script src="src/Common/webgl-utils.js"></script>
   <script src="src/Common/MV.js"></script>
 
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 16px;
-    }
+  <link rel="stylesheet" href="style.css">
 
-    canvas {
-      display: block;
-      margin-bottom: 16px;
-      border: 1px solid #ccc;
-      background: white;
-    }
-
-    .controls {
-      max-width: 300px;
-    }
-
-    .control {
-      margin-bottom: 12px;
-    }
-
-    label {
-      display: block;
-      font-size: 14px;
-      margin-bottom: 4px;
-    }
-  </style>
 </head>
 
 <body>
